2005-08-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/CodeWriter.cs:
		Fix typespec emitting.

	* Mono.Cecil/IReflectionVisitor.cs
	  Mono.Cecil/IMethod.cs
	  Mono.Cecil/BaseReflectionVisitor.cs
	  Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil/IConstructorCollection.cs
	  CodeGen/cecil.xml
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/TypeDefinition.cs
	  Mono.Cecil.Implem/ConstructorCollection.cs:
		Support constructors decently.

	* CodeGen/templates/Utilities.cs
	  Mono.Cecil.Metadata/Utilities.cs:
		Return a null token if the rid of a md token
		is 0. Fix the crash when Mono try to read 
		assemblies emitted by Cecil.

2005-08-19  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionWriter.cs:
		Set the RVA of a method only if it can
		have a body.
	* Mono.Cecil.Signatures/SignatureReader.cs:
		Remove debugging stuff.

	* Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Fix custom marshaller reading.

	* CodeGen/templates/NamedCollectionImplem.cs
	  CodeGen/templates/LzNamedCollectionImplem.cs
	  Mono.Cecil.Implem/ExternTypeCollection.cs
	  Mono.Cecil.Implem/TypeReferenceCollection.cs
	  Mono.Cecil.Implem/TypeDefinitionCollection.cs
	  Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/TablesComparer.cs
	  Mono.Cecil.Implem/Constants.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Correct bugs in type* tables generations.

	* Mono.Cecil/IModuleDefinitionCollection.cs
	  Mono.Cecil/IInterfaceCollection.cs
	  Mono.Cecil/INestedTypeCollection.cs
	  Mono.Cecil/ITypeReferenceCollection.cs
	  Mono.Cecil/IExternTypeCollection.cs
	  Mono.Cecil/IArrayDimensionCollection.cs
	  Mono.Cecil/IMethodDefinitionCollection.cs
	  Mono.Cecil/IPropertyDefinitionCollection.cs
	  Mono.Cecil/IAssemblyNameReferenceCollection.cs
	  Mono.Cecil/IModuleReferenceCollection.cs