@@ -38,7 +38,7 @@ namespace Mono.Cecil {
 		ITypeDefinition DefineType (string name, string ns, TypeAttributes attributes, ITypeReference baseType);
 		ITypeDefinition DefineType (string name, string ns, TypeAttributes attributes, Type baseType);
 
-		ITypeReference DefineTypeReference (string name, string ns, IAssemblyNameReference asm);
+		ITypeReference DefineTypeReference (string name, string ns, IAssemblyNameReference asm, bool valueType);
 		IFieldReference DefineFieldReference (string name, ITypeReference declaringType, ITypeReference fieldType);
 		IMethodReference DefineMethodReference (string name, ITypeReference declaringType,
 			ITypeReference returnType, ITypeReference [] parametersTypes,
